Removed lombok from dependencies